cluster-talos/kubernetes/apps/bazarr/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bazarr
  labels:
    k10.kasten.io/backup: "true"
    k10.kasten.io/storage-class: vsphere
